--- a/css/style.css
+++ b/css/style.css
@@ -3,15 +3,24 @@ body {
   font-family: arial, helvetica, sans-serif;
 }
 ul {
-  margin: 0px;
   padding: 0px;
   list-style: none;
+}
+h1,
+ul,
+p {
+  margin: 0px;
 }
 .header-bg {
   background-color: #000000;
 }
 a {
   text-decoration: none;
+  color: inherit;
+}
+img {
+  max-width: 100%;
+  display: block;
 }
 .header {
   display: flex;
@@ -73,4 +82,64 @@ a {
     padding: 8px 12px;
     font-size: 14px;
   }
+}
+
+.intro-bg {
+  background: #000000;
+  color: #ffffffff;
+}
+.intro {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  max-width: 1200px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.intro p {
+  grid-column: 1;
+}
+.intro a {
+  grid-column: 1;
+}
+.intro h1 span {
+  color: #ffbb00;
+}
+.intro a {
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  display: inline-block;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  color: #332200;
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bold;
+}
+.intro a:hover {
+  background: linear-gradient(#ffb60d, #e59317g);
+}
+.intro img {
+  grid-column: 2;
+  grid-row: 1/3;
+}
+.intro-content {
+  align-self: end;
+  padding-bottom: 80px;
+}
+.intro h1 {
+  margin-bottom: 32px;
+
+  font-size: 64px;
+  line-height: 1.125;
+}
+.intro p {
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2b2;
 }
